syntax = "proto3";

package user;

message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message GetUserInfoMapRequest{
    repeated string userIdList = 1; 
}

message UserInfo {
    string playerName = 1;
    string country = 2; 
}

message GetUserInfoMapResponse {
    map<string, UserInfo> userMap = 1;
}

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc GetUserInfoMap(GetUserInfoMapRequest) returns (GetUserInfoMapResponse){}
}